sorting, 작품소개 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -143,6 +143,10 @@
 
 							</div>
 							<table class="tstyle1">
+								<tr height = "90px">
+									<th>작품소개</th>
+									<td th:text="${result.deal.workIntrdc}"></td>
+								</tr>
 								<tr>
 									<th>제작년도</th>
 									<td th:text="${result.deal.workProdcYear}"></td>
