Revert "sorting, 작품소개 수정"
This reverts commit a1960b9cb62653bcbd48f23127d2d9eaccd9f342.

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -267,8 +267,13 @@
 									</a>
 								</li>
 								<li>
-									<a href="javascript:void(0);" name="BC" onclick="sorting(this)" class="">
-										응찰수
+									<a href="javascript:void(0);" name="KN" onclick="sorting(this)" class="">
+										작가명 <span>ㄱ</span> - <span>ㅎ</span>
+									</a>
+								</li>
+								<li>
+									<a href="javascript:void(0);" name="EN" onclick="sorting(this)" class="">
+										작가명 <span>A</span> - <span>Z</span>
 									</a>
 								</li>
 								<li>
@@ -293,7 +298,8 @@
 													<div class="drop-select">
 														<a href="javascript:void(0);" onclick="sorting(this)" name="LT" class="">등록 일시</a>
 														<a href="javascript:void(0);" onclick="sorting(this)" name="PY" class="">제작년도</a>
-														<a href="javascript:void(0);" onclick="sorting(this)" name="BC" class="">응찰수</a>
+														<a href="javascript:void(0);" onclick="sorting(this)" name="KN" class="">작가명 <span>ㄱ</span> - <span>ㅎ</span></a>
+														<a href="javascript:void(0);" onclick="sorting(this)" name="EN" class="">작가명 <span>A</span> - <span>Z</span></a>
 														<a href="javascript:void(0);" onclick="sorting(this)" name="PC" class="">가격</a>
 														<a href="javascript:void(0);" onclick="sorting(this)" name="RT" class="">종료 일시</a>
 													</div>
