--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -31,11 +31,6 @@
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
-	  
-	  
-	  
-	  
-	  
 	  gtag('js', new Date());
 	
 	  gtag('config', 'G-WRJBSR52MT');
@@ -401,7 +396,7 @@
 									</tr>
 									<tr>
 										<th>작품소개</th>
-										<td><textarea class="textarea-2" id="workIntrdc" maxlength="100" placeholder="작품소개를 입력해주세요. (한/영, 공백 포함 100자 이내)" th:value="${result.work.workIntrdc}" th:text="${result.work.workIntrdc}"></textarea></td>
+										<td><textarea class="textarea-2" id="workIntrdc" placeholder="작품소개를 입력해주세요." th:value="${result.work.workIntrdc}" th:text="${result.work.workIntrdc}"></textarea></td>
 									</tr>
 									<tr>
 										<th><span class="">작품 키워드</span></th>
