--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
@@ -447,7 +447,7 @@
 									</tr>
 									<tr class="trchk trtoggle">
 										<th><span class="">작품 소개</span></th>
-										<td><textarea class="textarea-2" id="COLLworkIntrdc" maxlength="100" placeholder="작품소개를 입력해주세요. (한/영, 공백 포함 100자 이내)"></textarea></td>
+										<td><textarea class="textarea-2" id="COLLworkIntrdc" placeholder="작품소개를 입력해주세요."></textarea></td>
 									</tr>
 									<tr class="trchk trtoggle">
 										<th><span class="">작품 키워드</span></th>
@@ -749,7 +749,7 @@
 									</tr>
 									<tr class="trchk trtoggle">
 										<th>작품소개</th>
-										<td><textarea class="textarea-2" id="WORKworkIntrdc" maxlength="100" placeholder="작품소개를 입력해주세요. (한/영, 공백 포함 100자 이내)"></textarea></td>
+										<td><textarea class="textarea-2" id="WORKworkIntrdc" placeholder="작품소개를 입력해주세요."></textarea></td>
 									</tr>
 									<tr class="trchk trtoggle">
 										<th><span class="">작품 키워드</span></th>
