--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -424,7 +424,7 @@
 								</tr>
 								<tr>
 									<th><span class="">작품 소개</span></th>
-									<td><textarea class="textarea-2" max-length="100" id="workIntrdc" maxlength="100" placeholder="작품소개를 입력해주세요.(한/영, 공백 포함 100자 이내)" th:value="${result.workIntrdc}" th:text="${result.workIntrdc}"></textarea></td>
+									<td><textarea class="textarea-2" id="workIntrdc" placeholder="작품소개를 입력해주세요." th:value="${result.workIntrdc}" th:text="${result.workIntrdc}"></textarea></td>
 								</tr>
 								<tr>
 									<th><span class="">작품 키워드</span></th>
