--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -410,7 +410,7 @@
 								</tr>
 								<tr>
 									<th>작품소개</th>
-									<td><textarea class="textarea-2" id="workIntrdc" maxlength="100" placeholder="작품소개를 입력해주세요. (한/영, 공백 포함 100자 이내)"></textarea></td>
+									<td><textarea class="textarea-2" id="workIntrdc" placeholder="작품소개를 입력해주세요."></textarea></td>
 								</tr>
 								<tr>
 									<th><span class="">작품 키워드</span></th>
