--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -1785,6 +1785,9 @@ function dealReg(){
 	        	if(data == -2){
 	        		modalAlertShow("해당 작품은 이미 판매 등록 되어있습니다.", "myWorkList");
 	        	}
+	        	if(data == -3){
+	        		modalAlertShow("ID당 판매 가능한 작품 수를 초과하였습니다.", "myWorkList");
+	        	}
 	        },
 	        error: function(error) {
 	            alert("오류 발생" + error);
