--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -269,13 +269,8 @@
 									</a>
 								</li>
 								<li>
-									<a href="javascript:void(0);" name="KN" onclick="sorting(this)" class="">
-										작가명 <span>ㄱ</span> - <span>ㅎ</span>
-									</a>
-								</li>
-								<li>
-									<a href="javascript:void(0);" name="EN" onclick="sorting(this)" class="">
-										작가명 <span>A</span> - <span>Z</span>
+									<a href="javascript:void(0);" name="BC" onclick="sorting(this)" class="">
+										응찰수
 									</a>
 								</li>
 								<li>
@@ -300,8 +295,7 @@
 													<div class="drop-select">
 														<a href="javascript:void(0);" onclick="sorting(this)" name="LT" class="">등록 일시</a>
 														<a href="javascript:void(0);" onclick="sorting(this)" name="PY" class="">제작년도</a>
-														<a href="javascript:void(0);" onclick="sorting(this)" name="KN" class="">작가명 <span>ㄱ</span> - <span>ㅎ</span></a>
-														<a href="javascript:void(0);" onclick="sorting(this)" name="EN" class="">작가명 <span>A</span> - <span>Z</span></a>
+														<a href="javascript:void(0);" onclick="sorting(this)" name="BC" class="">응찰수</a>
 														<a href="javascript:void(0);" onclick="sorting(this)" name="PC" class="">가격</a>
 														<a href="javascript:void(0);" onclick="sorting(this)" name="RT" class="">종료 일시</a>
 													</div>
