--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -254,8 +254,9 @@
 												* 해당 작품 구매(http://localhost/myDealDetailBuy)
 												* 내용 : 결제 정보 관련 거래 수수료 거래수수료 부가세 (변수명 fee, feeTax) 로직 변경
 												-->
-												<span class="c-reds2">카드결제 : 거래수수료 6.5%</span> <!-- 11.5% -> 6.5% 변경 (2023-01-16) : 정대현 -->
-												<br/><span class="c-reds2">가상계좌 : 거래수수료 5%</span> <!-- 10% -> 5% 변경 (2023-01-16) : 정대현 -->
+<!-- 												<span id="paymentFee" class="c-reds2">※결제 수단에 따라 구매 수수료가 다르게 적용 됩니다.</span> 11.5% -> 6.5% 변경 (2023-01-16) : 정대현 --><!-- 안내문구 변경 요청으로 변경(2023-06-08) -->
+												<span class="c-reds2" style="font-size:17px; font-weight: bold;">카드결제 : 거래수수료 11%</span>
+												<br/><span class="c-reds2" style="font-size:17px; font-weight: bold;">가상계좌 : 거래수수료 10%</span>
 											</div>
 											<!-- <div class="pay-check">
 												<input type="checkbox" id="a1" name="cc" />
@@ -272,38 +273,92 @@
 								</div>
 								<div class="myd-box">
 									<div class="myd-box-1">
+										<table class="mstyle-2">
+											<tr>
+												<th><span class="my-red">쿠폰 선택</span></th>
+												<td class="pd_t17">
+													<!-- <div class="selec-box bg-st"> -->
+														<!-- <select class="selectpicker" id="sbx_couponList_DD" style="min-width:300px !important;" disabled> -->
+														<select class="selectpicker" id="sbx_couponList_DD">
+															<option value= "null">-선택-</option>
+														</select>
+													<!-- </div> -->
+													<div id="div_couponList_DD">
+													</div>
+												</td>
+											</tr>
+										</table>
 										<div class="mg_t40">
+																
 											<table class="mstyle-1">
 												<tr>
 													<th>작품가</th>
 													<td th:text="${result.dealInfo.dealFinalPrc} + ' KRW'"></td>
 												</tr>
 												<tr>
-													<th>거래 수수료</th>
-													<td id="fee"></td>
+													<th>구매 수수료<br>(작품가의 10%)</th>
+													<td>
+														<div id="fee" style="width:100px;"></div>
+														<div>
+															<button id="btn_payFee" style="margin-left:80px;"><img src="resources/img/ba/me-icon.png" /></button>
+														</div>
+														<!-- 구매 수수료 보기 --><!--김한슬  -->
+															<div class="Toggle" style="display:none; margin-left:80px; font-weight: bold; opacity: 1;">
+																<div class="toggle_box1">
+																	<div class="toggle_bar1">판매수수료</div>
+																	<div class="toggle_close" id="btn_payFee_close"><img src="resources/img/ba/icon-end_1.png"></div>
+																</div>
+																<div class="toggle_con1">
+																	<table>
+																		<thead>
+																			<tr>
+																				<td style="text-align: center;">결제수수료</td>
+																				<td style="text-align: center;">판매수수료</td>
+																				<td style="text-align: center;">구매수수료</td>
+																			</tr>
+																		</thead>
+																		<tbody>
+																			<tr>
+																				<!-- 
+																				* [수수료 변경 Task]
+																				* 작품 거래 등록(http://localhost/dealReg)
+																				* 내용 : 판매수수료 설명란 변경 (거래 등록 유의사항)
+																				-->
+																				<td>가상계좌</td>
+																				<td>5%</td>
+																				<td>10%</td>
+																			</tr>
+																			<tr>
+																				<!-- 
+																				* [수수료 변경 Task]
+																				* 작품 거래 등록(http://localhost/dealReg)
+																				* 내용 : 판매수수료 설명란 변경 (거래 등록 유의사항)
+																				-->
+																				<td>신용카드</td>
+																				<td>6%</td>
+																				<td>11%</td>
+																			</tr>
+																		</tbody>
+																	</table>
+																	<p>※ 부가세 및 이벤트 할인 미적용</p>
+																</div>
+															</div>
+														</td>
 												</tr>
 												<tr>
-													<th>거래 수수료<br>부가세 (10%)</th>
+													<th>수수료 할인</th> <!--김한슬  -->
+													<td style="color:red" id="feeDc"></td>
+												</tr>
+												<tr>
+													<th>쿠폰 할인</th><!--김한슬  -->
+													<td style="color:red" id="cuponSale"></td>
+												<tr>
+													<th>구매 수수료<br>부가세</th>
 													<td id="feeTax"></td>
 												</tr>
 											</table>
-											<table class="mstyle-2">
-												<tr>
-													<th><span class="my-red">쿠폰 선택</span></th>
-													<td class="pd_t17">
-														<!-- <div class="selec-box bg-st"> -->
-															<!-- <select class="selectpicker" id="sbx_couponList_DD" style="min-width:300px !important;" disabled> -->
-															<select class="selectpicker" id="sbx_couponList_DD" disabled>
-																<option value="null">-선택-</option>
-															</select>
-														<!-- </div> -->
-														<div id="div_couponList_DD">
-														</div>
-														<div class="comy-sum" id="div_totalAmount_1">
-														</div>
-													</td>
-												</tr>
-											</table>
+													<div class="comy-sum" id="div_totalAmount_1">
+													</div>
 											<!-- <table class="mstyle-3">
 												<tr>
 													<th>총금액</th>
@@ -534,7 +589,7 @@
 													<div id="div_couponList_TD">
 													</div>
 													<div class="comy-sum" id="div_totalAmount_2">
-														총 금액<span>3,000,000 KRW</span>
+														최종 결제 금액<span>3,000,000 KRW</span>
 													</div>
 												</td>
 											</tr>
@@ -875,6 +930,7 @@
 var result = /*[[${result}]]*/ 'default';
 var fee = 0; //거래 수수료
 var feeTax = 0; //거래 수수료 부과세
+var feeDc = 0;//수수료할인-김한슬-
 var amount = 0; //할인 전 금액
 var disc = 0; //할인할 금액
 var totalAmount = 0; //최종 결제 금액
@@ -894,6 +950,7 @@ window.onpopstate = function(e) {   
 		window.location.href = referrer;
 	}
 };
+
 /*
  * 화면 오픈시
  */
@@ -1030,12 +1087,15 @@ jQuery(document).ready(function() {
 });
 //1차 결제 거래 수수료 구하기
 function feeCal(){
-	fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.05); //작품가의 10프로인 수수료를 구한다 -> 5% 변경 (2023-01-16) : 정대현
+	fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.10); //작품가의 10프로인 수수료를 구한다 -> 5% 변경 (2023-01-16) : 정대현
 	feeTax = fee * 0.10;
+	feeDc = 0;
 	$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 	$("#feeTax").text(formatComma(feeTax) + ' KRW'); //작품 수수료 영역에 입력한다
+	$("#feeDc").empty(); //작품 수수료 초기화
 	amount = parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')); //작품가를 정수형으로 가져온다
 	totalTrnsprtPrc();
+	
 }
 /*
  * 남은 시간 초 단위로 불러온다 
@@ -1173,41 +1233,66 @@ function updateNewAddr(){
  * 결제 수단 클릭시
  */
 function btn_paymethod_onclick(obj){
+// 	var paymentFee = document.getElementById("paymentFee");//결제수단 문구
 	result.dealInfo.paymethod = $('input[name=paymethod]:checked').val();
 	if(result.dealInfo.buyPaymntSttsCd == "1PW"){
 		if(result.dealInfo.paymethod == "CARD"){
 			//feeCal();
-			fee = Math.round(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '') * 0.065); //거래 수수료 11.5% -> 6.5%로 변경 (2023-01-16) : 정대현
-			feeTax = fee * 0.10;
+// 			paymentFee.innerText = "구매수수료 50% 할인 이벤트";//결제수단 선택이 아래 나오는 문구
+			fee = Math.round(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '') * 0.11); //거래 수수료 11.5% -> 6.5%로 변경 (2023-01-16) : 정대현
+			feeTax = fee * 0.11;
+// 			feeDc = fee * 0.50;
 			$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 			$("#feeTax").text(formatComma(feeTax) + ' KRW'); //작품 수수료 영역에 입력한다
-			//modalAlertShow("오픈 이벤트 거래 수수료 할인이 적용 되었습니다.");
+			$("#feeDc").text('- ' + formatComma(feeDc) + ' KRW');//수수료 할인 영역에 입력한다
+// 			modalAlertShow("오픈 이벤트 거래 수수료 할인이 적용 되었습니다.");
 		}
 		if(result.dealInfo.paymethod == "VACCT"){
 			//feeCal();
-			fee = Math.round(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '') * 0.05); //거래 수수료 10% -> 5%로 변경 (2023-01-16) : 정대현
+// 			paymentFee.innerText = "구매수수료 50% 할인 이벤트";//결제수단 선택이 아래 나오는 문구
+			fee = Math.round(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '') * 0.10); //거래 수수료 10% -> 5%로 변경 (2023-01-16) : 정대현
 			feeTax = fee * 0.10;
+// 			feeDc = fee * 0.50;
 			$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 			$("#feeTax").text(formatComma(feeTax) + ' KRW'); //작품 수수료 영역에 입력한다
-			//modalAlertShow("오픈 이벤트 거래 수수료 할인이 적용 되었습니다.");
+			$("#feeDc").text('- ' + formatComma(feeDc) + ' KRW');//수수료 할인 영역에 입력한다
+// 			modalAlertShow("오픈 이벤트 거래 수수료 할인이 적용 되었습니다.");
 		}
 		if(result.dealInfo.paymethod == "ACCT"){
 			feeCal();
 		}
-		$("#sbx_couponList_DD").val("null");
-		$("#div_couponList_DD").empty();
-		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
-		totalAmount = 0;
-		totalAmount += amount; //최종 결제 금액에 작품가를 더한다
-		totalAmount += fee; //최종 결제 금액에서 할인된 거래 수수료를 더한다
-		totalAmount += feeTax;
-		$("#fee").text(formatComma(fee)+" KRW");
-		$("#feeTax").text(formatComma(feeTax)+" KRW");
-		$("#div_totalAmount_1").empty(); //1차 최종 결제 금액 표시 영역을 초기화 시킨다.
-		$("#div_totalAmount_1").append("총 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
-	}
+		//최종 결제에 같은코드 있어 주석
+// 		$("#sbx_couponList_DD").val("null");
+//  		$("#div_couponList_DD").empty();
+//  		$(".selectpicker").selectpicker("refresh"); //셀렉트픽커 새로고침
+// 		totalAmount = 0;
+// 		totalAmount += amount; //최종 결제 금액에 작품가를 더한다
+// 		totalAmount += fee; //최종 결제 금액에서 할인된 거래 수수료를 더한다
+// 		totalAmount += feeTax;
+// 		totalAmount -= feeDc;//수수료할인 만큼빼기
+		
+// 		$("#fee").text(formatComma(fee)+" KRW");
+// 		$("#feeTax").text(formatComma(feeTax)+" KRW");
+	
+//  		$("#div_totalAmount_1").empty(); //1차 최종 결제 금액 표시 영역을 초기화 시킨다.
+//  		$("#div_totalAmount_1").append("최종 결제 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
+ 	}
+	totalTrnsprtPrc();
 }
 
+//수수료 팝업창 열기
+$(function (){
+	$("#btn_payFee").click(function (){
+		$(".Toggle").toggle();
+	});
+});
+
+ //수수료 팝업창 닫기
+$(function (){
+	$('#btn_payFee_close').click(function() {
+		 $('.Toggle').hide(); 
+	});
+}); 
 /*
  * 1차 결제 영수증 
  */
@@ -1256,6 +1341,7 @@ function openReceipt2(){
 			paymntTypCd : "", //결제 유형 코드 (1 1차결제/2 2차결제)
 			paymntDivCd : "B" //결제 구분 코드 (B 구매자/S 판매자)
 			};
+	console.log(result.dealInfo.paymethod);
 	if(result.dealInfo.paymethod == null || result.dealInfo.paymethod == ""){
 		modalAlertShow("결제 수단이 선택되지 않았습니다.");
 		return false;
@@ -1543,7 +1629,7 @@ $("#sbx_trnsprtTypCd").on("change", function(){
 			});
 		}
 	}
-	totalTrnsprtPrc(); //총 금액 자동계산
+	totalTrnsprtPrc(); //최종 결제 금액 자동계산
 });
 
 //운송 지역 구분 선택시
@@ -1627,7 +1713,7 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 		
 		
 	}
-	totalTrnsprtPrc(); //총 금액 자동계산
+	totalTrnsprtPrc(); //최종 결제 금액 자동계산
 });
 
 //서비스 구분 셀렉트 박스 선택시
@@ -1717,6 +1803,8 @@ function getCouponList(cuponTypCd){
 
 //1차 결제 쿠폰 셀렉트 박스 선택시
 $("#sbx_couponList_DD").on("change", function(){
+	
+	
 	var checked = $("#sbx_couponList_DD option:selected").val();
 	var cuponNm = $("#sbx_couponList_DD option:selected").text();
 	if(checked != "null"){
@@ -1725,15 +1813,18 @@ $("#sbx_couponList_DD").on("change", function(){
 		innerText += '	<div class="cmy-text">'+$("#sbx_couponList_DD option:selected").text()+'</div>';
 		if(cuponNm.indexOf("%") > -1){
 			innerText += '	<div id="div_couponVal_DD" class="cmy-coupon">'+$("#sbx_couponList_DD option:selected").val()+'%</div>';
+			
 		}else{
 			innerText += '	<div id="div_couponVal_DD" class="cmy-coupon">'+formatComma($("#sbx_couponList_DD option:selected").val())+' KRW</div>';
+			$("#cuponSale").text("- " + formatComma($("#sbx_couponList_DD option:selected").val())+' KRW');//이주호
 		}
-		//innerText += '	<div class="cmy-end">X</div>';
+// 		innerText += '	<div class="cmy-end">X</div>';
 		innerText += '</div>';
 		$("#div_couponList_DD").empty();
 		$("#div_couponList_DD").append(innerText).trigger("create"); //쿠폰 추가
 	}else{
 		$("#div_couponList_DD").empty();
+		$("#cuponSale").empty();
 	}
 	totalTrnsprtPrc();
 });
@@ -1821,14 +1912,14 @@ $("#sbx_couponList_DD").on("change", function(){
 				}
 				$("#div_couponList_TD").empty();
 				$("#div_couponList_TD").append(couponListHtml).trigger("create"); //쿠폰 추가
-				//총 금액 영역
+				//최종 결제 금액 영역
 				$("#div_totalAmount_2").empty(); //2차 최종 결제 금액 표시 영역을 초기화 시킨다.
 				disc = data.discAmt;
 				if(data.totalAmt < 0){
 					data.totalAmt = 0;
 				}
 				totalAmount = data.totalAmt;
-				$("#div_totalAmount_2").append("총 금액<span>"+formatComma(data.totalAmt)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
+				$("#div_totalAmount_2").append("최종 결제 금액<span>"+formatComma(data.totalAmt)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
 			}
 		},
 		error: function(error) {
@@ -1896,7 +1987,7 @@ $("#sbx_couponList_TD").on("change", function(){
 		$("#div_couponList_TD").empty();
 		$("#div_couponList_TD").append(couponListHtml).trigger("create"); //쿠폰 추가
 		$("#div_totalAmount_2").empty();
-		$("#div_totalAmount_2").append("총 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //총 금액에 쿠폰 적용
+		$("#div_totalAmount_2").append("최종 결제 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //최종 결제 금액에 쿠폰 적용
 	}else{
 		$("#div_couponList_TD").empty();
 		totalTrnsprtPrc();
@@ -1920,16 +2011,16 @@ function totalTrnsprtPrc(){
 			totalAmount += trnsprtPrc; ///최종 부가서비스 금액을 가져온다
 		}
 		$("#div_totalAmount_2").empty(); //2차 최종 결제 금액 표시 영역을 초기화 시킨다.
-		$("#div_totalAmount_2").append("총 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
+		$("#div_totalAmount_2").append("최종 결제 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
 	/*********************/
 	/*1차 결제 최종 금액 구하기*/
 	/*********************/
 	}else if(result.dealInfo.buyPaymntSttsCd == "1PW"){ //1차 결제
         //if(document.querySelector("#div_couponVal_DD") == null){
         if($("#sbx_couponList_DD").val() == "null"){
-        	$("input[name=paymethod]:checked").prop("checked",false);
+//         	$("input[name=paymethod]:checked").prop("checked",false); 적용시 결제수단 표시안됨-김한슬-
 			disc = 0;
-			fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.05); //작품가의 10프로인 수수료를 구한다 ->  5% 변경 (2023-01-16) : 정대현
+			fee = Math.round(parseInt(result.dealInfo.dealFinalPrc.replaceAll(/,/g, '')) * 0.10); //작품가의 10프로인 수수료를 구한다 ->  5% 변경 (2023-01-16) : 정대현
 			feeTax = fee * 0.10;
 			$("#fee").text(formatComma(fee) + ' KRW'); //작품 수수료 영역에 입력한다
 			$("#feeTax").text(formatComma(feeTax) + ' KRW'); //작품 수수료 영역에 입력한다
@@ -1952,30 +2043,39 @@ function totalTrnsprtPrc(){
 				disc = disc.replaceAll('%', ''); //쿠폰 할인 금액을 가져온다
 				disc = parseInt(disc)*0.01; //쿠폰 할인 금액을 가져온다
 				disc = fee * disc; //쿠폰 할인 금액을 가져온다
-				fee -= disc; //작품 거래 수수료 금액에 할인 금액을 뺀다
-				feeTax = fee * 0.10;
+				$("#cuponSale").text("- " + formatComma(disc) +' KRW');//김한슬
+				//쿠폰할인가는 최종결제 금액에서 할인하기위해 주석처리 -김한슬-
+// 				fee -= disc; //작품 거래 수수료 금액에 할인 금액을 뺀다
+// 				feeTax = fee * 0.10;
+// 				feeDc = fee * 0.50;
 				if(fee < 0){
 					fee = 0;
 					feeTax = fee * 0.10;
+					feeDc = fee * 0.50;
 				}
 			}else{ //쿠폰 할인 금액이 원화이면
 				disc = disc.replaceAll(' KRW', '') //쿠폰 할인 금액을 가져온다
 				disc = parseInt(disc.replaceAll(/,/g, '')); //쿠폰 할인 금액을 가져온다
-				fee -= disc; //작품 거래 수수료 금액에 할인 금액을 뺀다
-				feeTax = fee * 0.10;
+				//쿠폰할인가는 최종결제 금액에서 할인하기위해 주석처리 -김한슬-
+// 				fee -= disc; //작품 거래 수수료 금액에 할인 금액을 뺀다
+// 				feeTax = fee * 0.10;
+// 				feeDc = fee * 0.50;
 				if(fee < 0){
 					fee = 0;
 					feeTax = fee * 0.10;
+					feeDc = fee * 0.50;
 				}
 			}
 		}
 		totalAmount += amount; //최종 결제 금액에 작품가를 더한다
 		totalAmount += fee; //최종 결제 금액에서 할인된 거래 수수료를 더한다
 		totalAmount += feeTax;
+		totalAmount -= feeDc;//최종 결제금액에서 수수료할인을 뺀다
+		totalAmount -= disc;//최종 결제금액에서 쿠폰금액만큼 뺀다
 		$("#fee").text(formatComma(fee)+" KRW");
 		$("#feeTax").text(formatComma(feeTax)+" KRW");
 		$("#div_totalAmount_1").empty(); //1차 최종 결제 금액 표시 영역을 초기화 시킨다.
-		$("#div_totalAmount_1").append("총 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
+		$("#div_totalAmount_1").append("최종 결제 금액<span>"+formatComma(totalAmount)+" KRW</span>").trigger("create"); //부가서비스 총 가격 추가
 	}
 }
 
