메인 배너 삭제

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -108,9 +108,9 @@
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_pc.jpg" border="0"/></a>
 							</div> -->
 							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
-							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
+							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<img src="/resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
-							</div>
+							</div> -->
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
 								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
@@ -136,9 +136,9 @@
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_pc.jpg" border="0"/></a>
 							</div> -->
 							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<img src="/resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
-							</div>
+							</div> -->
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet';" style="cursor:pointer;"/>
 							</div>
@@ -167,9 +167,9 @@
 								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_mobile.jpg" border="0"/></a>
 							</div> -->
 							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<img src="/resources/img/DA_banner_mobile_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
-							</div>
+							</div> -->
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-21_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
