--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -94,7 +94,7 @@
 			<div class="h-gnb">
 				<div class="navbox">
 					<nav>
-						<li><a href="/main" class="logo_mo"><img src="/resources/img/logo_mo.jpg" width="26px"></a></li>
+						<li><a href="/main" class="logo_mo"><img src="/resources/img/favicon.png" width="26px"></a></li>
 						<li><a href="/deal">Deal</a></li>
 						<!-- <li><a href="/insights"><img src="/resources/img/mgz/link-text.png" class="link-text" /></a></li> -->
 						<li><a href="/mgz9/insights">Magazine<span style="color:#ea5514;">9</span></a></li>
