--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -607,6 +607,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .edit_area:after{display: block;clear: both;content: "";}
 .edit_area{font-size: 30px;text-align: center;margin: 50px 0;}
 
+.works_showingoff_detail_page_wrap{margin-bottom: 200px;}
 .works_showingoff_detail_page_wrap .picture{padding: 80px 0;display: flex;justify-content: center;}
 .works_showingoff_detail_page_wrap h3{font-size: 30px;font-weight: 500;padding-bottom: 30px;}
 
@@ -619,7 +620,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_showingoff_detail_page_wrap .user_wrap .mem_type{text-align: center;font-size: 16px;font-weight: 300;padding: 23px 0;}
 .works_showingoff_detail_page_wrap .user_wrap .mem_type span{font-size: 16px;font-weight: bold;border: 1px solid #939393;padding: 5px 30px;border-radius: 50px;background: #dbdbdb;margin-left: 10px;}
 .works_showingoff_detail_page_wrap .user_wrap .following{padding: 16px 0 14px 10px;}
-.works_showingoff_detail_page_wrap .user_wrap .following button{background: #608bc6;font-size: 16px;font-weight: 700;color: #ffffff;padding: 8px 14px;border-radius: 5px;}
+.works_showingoff_detail_page_wrap .user_wrap .following button{background: #608bc6;font-size: 16px;font-weight: 700;color: #ffffff;padding: 8px 14px 7px;border-radius: 5px;margin-top: 1px;}
 
 .works_showingoff_detail_page_wrap .user_wrap .user ul li{float: left;}
 
@@ -627,27 +628,128 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_showingoff_detail_page_wrap .icon_box:after{content: "";display: block;clear: both;}
 .works_showingoff_detail_page_wrap .icon_box ul li{float: left;text-align: center;font-size: 16px;padding: 5px 15px;}
 .works_showingoff_detail_page_wrap .icon_box ul .time{padding-top: 30px;}
+.works_showingoff_detail_page_wrap .icon_box ul .day{padding-top: 30px;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_good{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/mypage/ico_good.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_scrap{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/mypage/ico_scrap.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_hits{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/mypage/ico_alarm.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_comments{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/mypage/ico_comments.png") 50% 50% no-repeat;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_report{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/mypage/ico_report.png") 50% 50% no-repeat;}
 
-.works_showingoff_detail_page_wrap .picture_detail{display: flex;justify-content: center;flex-direction: column;align-items: center}
+.works_showingoff_detail_page_wrap .picture_detail{display: flex;justify-content: center;flex-direction: column;align-items: center;border-bottom: 1px solid #e8e8e8;}
 .works_showingoff_detail_page_wrap .picture_detail .method{padding: 50px 0;font-size: 20px;font-weight: 500;}
-.works_showingoff_detail_page_wrap .picture_detail p{padding: 30px 0;font-size: 16px;font-weight: 300;}
+.works_showingoff_detail_page_wrap .picture_detail .small_tit{padding: 50px 0;font-size: 28px;font-weight: 700;}
+.works_showingoff_detail_page_wrap .picture_detail p{padding: 30px 0 50px;font-size: 16px;font-weight: 300;}
 
+.works_info_wrap{margin-top: 30px;}
+.works_info_wrap:after{content: "";display: block;clear: both;}
+.works_info_wrap .works_info_left{width: 680px;display: table-cell;}
+.works_info_wrap .works_info_left .contents_box{width: 600px;}
+.works_info_wrap .works_info_left .contents_box .big_img{margin-bottom: 12.5px;width: 600px;height: 600px;}
+.works_info_wrap .works_info_left .contents_box .big_img img{width: 100%;height: 100%;object-fit: contain;}
+.works_info_wrap .works_info_left .contents_box .small_img img{width: 75px;height: 75px;margin-right: 12.5px;float: left;object-fit: contain;}
+.works_info_wrap .works_info_left .contents_box .small_img img:last-child{margin-right: 0;}
 
+.works_info_wrap .works_info_right{display: table-cell;}
+.works_info_wrap .works_info_right .tit_wrap .tit_01{font-size: 50px;font-weight: 500;color: #111111;}
+.works_info_wrap .works_info_right .tit_wrap .tit_02{font-size: 30px;font-weight: 300;color: #111111;}
+.works_info_wrap .works_info_right table{table-layout: fixed;border: 0;border-spacing: 0;border-collapse: collapse;}
+.works_info_wrap .works_info_right .tstyle1{margin-top: 40px;}
+.works_info_wrap .works_info_right .tstyle1 th{font-size: 20px;font-weight: 600;color: #111111;width: 130px;padding-bottom: 12px;text-align: left;}
+.works_info_wrap .works_info_right .tstyle1 td{font-size: 16px;font-weight: 300;color: #111111;padding-bottom: 12px;text-align: left;}
+.works_info_wrap .works_info_right .btn_worksInfo_wrap{margin-top: 80px;}
+.works_info_wrap .works_info_right .btn_worksInfo_wrap button{width: 100%;font-size: 20px;color: #ffffff;background: #ea655b;padding: 16px 0;}
 
+.works_showingoff_detai2_page_wrap{margin-top: 50px;padding-bottom: 200px;position: relative;}
+.works_showingoff_detai2_page_wrap h2{margin-bottom: 50px;}
+.works_showingoff_detai2_page_wrap .artist_info_wrap{position: relative;}
+.works_showingoff_detai2_page_wrap .artist_info_wrap .artist_info_left{width: 300px;display: table-cell;vertical-align: top;}
+.works_showingoff_detai2_page_wrap .artist_info_wrap .artist_info_right{display: table-cell;position: relative;}
+.works_showingoff_detai2_page_wrap .artist_info_wrap .artist_info_right .artist_name{font-size: 36px;font-weight: 500;}
+.works_showingoff_detai2_page_wrap .artist_info_wrap .artist_info_right p{font-size: 18px;font-weight: 300;margin-top: 15px;}
+.works_showingoff_detai2_page_wrap .artist_info_wrap .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/mypage/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 90.8%;right: 0;}
 
+.works_showingoff_detai2_page_wrap .artist_contents{background-color: #f9f9f9;margin-top: 150px;position: relative;}
+.works_showingoff_detai2_page_wrap .artist_contents .contents_tit h4{font-size: 26px;font-weight: 500;padding: 60px 0 0 30px;}
+.works_showingoff_detai2_page_wrap .artist_contents .contents_tit button{background: #828282;padding: 16px 50px;font-size: 16px;font-weight: 500;color: #ffffff;border-radius: 9999px;position: absolute;top: 50px;right: 30px;}
+.works_showingoff_detai2_page_wrap .artist_contents .swipe_box{padding: 30px 0 100px;display: flex;justify-content: flex-start;}
+.works_showingoff_detai2_page_wrap .artist_contents .swipe_box .box_wrap{width: 375px;height: 375px;border: 1px solid #e9e9e9;display: flex;justify-content: center;align-items: center}
+.works_showingoff_detai2_page_wrap .artist_contents .swipe_box .pic_box00 a img{width: 280px;height: 280px;object-fit: contain;}
 
+.comments_box_wrap {margin-top: 10px;}
+.comments_box_wrap form p{padding: 20px 10px;}
+.comments_box_wrap form p label{display: block;float: left;font-size: 18px;font-weight: 500;color: #111111;width: 175px;padding-top: 11px;}
+.comments_box_wrap form p label strong{color: #b81d2c;margin-left: 6px;}
+.comments_box_wrap form p input{width: 82%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding: 10px 20px;}
+.comments_box_wrap form p span{margin: 0 20px;}
+.comments_box_wrap form .size_guide{font-size: 14px;color: #999999;margin-left: 175px;padding-top: 0;}
+.comments_box_wrap form .question_mark{position: relative;}
+.comments_box_wrap form .question_mark img{position: absolute;top: 31px;right: -20px;}
 
+.comments_box_wrap .comments_box{background: #f5f5f5;border-bottom: 1px solid #e8e8e8;}
+.comments_box_wrap .comments_box .user_wrap{position: relative;border-top: 1px solid #e8e8e8;}
+.comments_box_wrap .comments_box .user_wrap:after{content: "";display: block;clear: both;}
+.comments_box_wrap .comments_box .user_wrap .user_img{float: left;margin: 10px 10px 10px 20px;}
+.comments_box_wrap .comments_box .user_wrap .user{}
+.comments_box_wrap .comments_box .user_wrap .user ul .user_name{padding: 10px 0 0;}
+.comments_box_wrap .comments_box .user_wrap .user_name span{font-size: 16px;font-weight: 500;color: #111111;padding: 3px 8px;border-radius: 5px;display: inline-block;}
+.comments_box_wrap .comments_box .user_wrap .user ul li ul li{float: left;padding: 0 12px 10px 12px;background: url("../img/mypage/comments_user_line.gif") 100% 20% no-repeat;}
+.comments_box_wrap .comments_box .user_wrap .user ul li ul li:first-child{padding: 0 30px 0 8px;background: none;}
+.comments_box_wrap .comments_box .user_wrap .user ul li ul li:last-child{background: none;}
+.comments_box_wrap .comments_box .comments{margin-left: 100px;padding: 20px 0;}
+
+.comments_box_wrap .answer_comments_box{background: #ffffff;border-bottom: 1px solid #e8e8e8;}
+.comments_box_wrap .answer_comments_box .user_wrap{position: relative;border-top: 1px solid #e8e8e8;}
+.comments_box_wrap .answer_comments_box .user_wrap:after{content: "";display: block;clear: both;}
+.comments_box_wrap .answer_comments_box .user_wrap .ico_answer_comments{float: left;padding: 20px 16px 0 50px;}
+.comments_box_wrap .answer_comments_box .user_wrap .user_img{float: left;margin: 10px 10px 10px 13px;}
+.comments_box_wrap .answer_comments_box .user_wrap .user{}
+.comments_box_wrap .answer_comments_box .user_wrap .user ul .user_name{padding: 10px 0 0;}
+.comments_box_wrap .answer_comments_box .user_wrap .user_name span{font-size: 16px;font-weight: 500;color: #111111;padding: 3px 8px;border-radius: 5px;display: inline-block;}
+.comments_box_wrap .answer_comments_box .user_wrap .user ul li ul li{float: left;padding: 0 12px 10px 12px;background: url("../img/mypage/comments_user_line.gif") 100% 20% no-repeat;}
+.comments_box_wrap .answer_comments_box .user_wrap .user ul li ul li:first-child{padding: 0 30px 0 8px;background: none;}
+.comments_box_wrap .answer_comments_box .user_wrap .user ul li ul li:last-child{background: none;}
+.comments_box_wrap .answer_comments_box .comments{margin-left: 100px;padding: 20px 0;}
+
+.works_info_wrap .works_info_right .tstyle1 tr .keyword a{margin-right: 10px;}
+.works_info_wrap .works_info_right .btn_worksInfo_wrap .btn_list{width: 100%;font-size: 20px;color: #ffffff;background: #969696 url("../img/mypage/ico_list.png") 30% 50% no-repeat;padding: 16px 0 16px 30px;}
+.contents_showingoff_wrap{margin-top: 30px;}
+.contents_showingoff_wrap .showingoff_con_left{width: 750px;display: table-cell;padding-right: 30px;}
+.contents_showingoff_wrap .showingoff_con_left .img{width: 300px;display: table-cell;vertical-align: top;}
+.contents_showingoff_wrap .showingoff_con_left .con_r{display: table-cell;padding-left: 30px;position: relative;}
+.contents_showingoff_wrap .showingoff_con_left .con_r h4{font-size: 30px;font-weight: 500;}
+.contents_showingoff_wrap .showingoff_con_left .con_r p{margin-top: 20px;line-height: 25px;}
+.contents_showingoff_wrap .showingoff_con_left .con_r .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/mypage/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 90.8%;right: 0;}
+.contents_showingoff_wrap .showingoff_con_right{display: table-cell;padding-right: 30px;}
+.contents_showingoff_wrap .showingoff_con_right .img{width: 300px;display: table-cell;vertical-align: top;}
+.contents_showingoff_wrap .showingoff_con_right .con_r{display: table-cell;padding-left: 30px;position: relative;}
+.contents_showingoff_wrap .showingoff_con_right .con_r h4{font-size: 30px;font-weight: 500;}
+.contents_showingoff_wrap .showingoff_con_right .con_r p{margin-top: 20px;line-height: 25px;}
+.contents_showingoff_wrap .showingoff_con_right .con_r .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/mypage/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 90.8%;right: 0;}
+
+.selling_price{border: #dedede 1px solid;padding: 27px;margin-top: 20px;}
+.selling_price .tstyle2 th{width: 116px;padding-bottom: 13px;vertical-align: middle;text-align: left;} 
+.selling_price .tstyle2 td{color: #666666;font-size: 16px;vertical-align: middle;padding-bottom: 14px;}
+.selling_price .tstyle2 img{vertical-align: middle;} 
+.selling_price .tstyle2 .tsc-1 span{font-size: 14px;display: inline-block;color: #111111;font-weight: 500;padding-left: 10px;vertical-align: middle;}
+
+.gallery_keyword_wrap{display: flex;justify-content: space-between;margin-top: 10px;}
+.gallery_keyword_wrap span{background: #8f8f8f;font-size: 14px;font-weight: 300;color: #ffffff;padding: 3px 10px;border-radius: 5px;}
+.gallery_keyword_wrap p a{margin-left: 10px;}
+
+.works_showingoff_detail_page_wrap .artist_contents{background-color: #f9f9f9;margin-top: 150px;position: relative;}
+.works_showingoff_detail_page_wrap .artist_contents .contents_tit h4{font-size: 26px;font-weight: 500;padding: 60px 0 0 30px;}
+.works_showingoff_detail_page_wrap .artist_contents .contents_tit button{background: #828282;padding: 16px 50px;font-size: 16px;font-weight: 500;color: #ffffff;border-radius: 9999px;position: absolute;top: 50px;right: 30px;}
+.works_showingoff_detail_page_wrap .artist_contents .swipe_box{padding: 30px 0 100px;display: flex;justify-content: flex-start;}
+.works_showingoff_detail_page_wrap .artist_contents .swipe_box .box_wrap{width: 375px;height: 375px;border: 1px solid #e9e9e9;display: flex;justify-content: center;align-items: center}
+.works_showingoff_detail_page_wrap .artist_contents .swipe_box .pic_box00 a img{width: 280px;height: 280px;object-fit: contain;}
 
 .pt0{padding-top: 0 !important;}
 .pt5{padding-top: 5px !important;}
 .pt20{padding-top: 20px !important;}
 .pt50{padding-top: 50px !important;}
+.pb0{padding-bottom: 0 !important;}
 .pl13{padding-left: 13px !important;}
+.pr10{padding-right: 10px !important;}
 
 .pd_tb30{padding: 30px 0 !important;}
 
@@ -656,11 +758,17 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .mt10{margin-top: 10px !important;}
 .mt16{margin-top: 16px !important;}
 .mt30{margin-top: 30px !important;}
+.mt50{margin-top: 50px !important;}
 .mt114{margin-top: 114px !important;}
+.mb0{margin-bottom: 0 !important;}
+.ml0{margin-left: 0 !important;}
 .ml5{margin-left: 5px !important;}
 .ml10{margin-left: 10px;}
+.ml13{margin-left: 13px;}
+.ml14{margin-left: 14px;}
 .mr0{margin-right: 0 !important;}
 .mb16{margin-bottom: 16px !important;}
+.mb30{margin-bottom: 30px !important;}
 
 .height114{height: 114px !important;}
 .height120{height: 120px !important;}
@@ -675,8 +783,12 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 
 .width175px{width: 175px !important;}
 .width20per{width: 20% !important;}
+.width30per{width: 30% !important;}
+.width32per{width: 32% !important;}
 .width66per{width: 66% !important;}
 .width75per{width: 75% !important;}
+.width78per{width: 78% !important;}
+.width80per{width: 80% !important;}
 .width82per{width: 82% !important;}
 .width100per{width: 100% !important;}
 
@@ -685,3 +797,19 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 
 .line{border: 0.5px solid #f5f5f5;}
 .vh{visibility: hidden !important;}
+
+.color-box{}
+.color-box label{width: 23px;height: 23px;display: inline-block;border-radius: 50%;margin-right: 13px;position: relative;}
+.color-box label:last-child{margin-right:0;}
+.color-box label.mc-1{background: linear-gradient(#ff0101, #ff7519, #ffcc19, #b1ff19, #19fff7, #3065b4, #9426c7);}
+.color-box label.mc-2{background:#e24537;}
+.color-box label.mc-3{background:#fe793d;}
+.color-box label.mc-4{background:#fdd03b;}
+.color-box label.mc-5{background:#6eae30;}
+.color-box label.mc-6{background:#75d3fe;}
+.color-box label.mc-7{background:#3b97f5;}
+.color-box label.mc-8{background:#935de0;}
+.color-box label.mc-9{background:#b66d3e;}
+.color-box label.mc-10{background:#ffffff; border:#c7c7c7 1px solid}
+.color-box label.mc-11{background:#c7c7c7;}
+.color-box label.mc-12{background:#000000;}
