--- a/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
@@ -1,26 +1,24 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+	pageEncoding="UTF-8"%>
 
 
-  <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/admin/artWorkList" class="nav-link">작품관리</a>
-      </li>
-     <!--  <li class="nav-item d-none d-sm-inline-block">
+<!-- Navbar -->
+<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+	<!-- Left navbar links -->
+	<ul class="navbar-nav">
+		<li class="nav-item"><a class="nav-link" data-widget="pushmenu"
+			href="#" role="button"><i class="fas fa-bars"></i></a></li>
+		<li class="nav-item d-none d-sm-inline-block"><a href="#"
+			class="nav-link">Home</a></li>
+		<li class="nav-item d-none d-sm-inline-block"><a
+			href="/admin/artWorkList" class="nav-link">작품관리</a></li>
+		<!--  <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Contact</a>
       </li> -->
-    </ul>
+	</ul>
 
-    <!-- SEARCH FORM -->
-    <!-- <form class="form-inline ml-3">
+	<!-- SEARCH FORM -->
+	<!-- <form class="form-inline ml-3">
       <div class="input-group input-group-sm">
         <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
         <div class="input-group-append">
@@ -31,26 +29,24 @@
       </div>
     </form> -->
 
-    <!-- Right navbar links -->
-    
-  </nav>
-  <!-- /.navbar -->
+	<!-- Right navbar links -->
 
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="#" class="brand-link">
-      <img src="/resources/dist/img/AdminLTELogo.png"
-           alt="AdminLTE Logo"
-           class="brand-image img-circle elevation-3"
-           style="opacity: .8">
-      <span class="brand-text font-weight-light">Dearling art</span>
-    </a>
+</nav>
+<!-- /.navbar -->
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user (optional) -->
-     <!--  <div class="user-panel mt-3 pb-3 mb-3 d-flex" style="display:none">
+<!-- Main Sidebar Container -->
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+	<!-- Brand Logo -->
+	<a href="#" class="brand-link"> <img
+		src="/resources/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
+		class="brand-image img-circle elevation-3" style="opacity: .8">
+		<span class="brand-text font-weight-light">Dearling art</span>
+	</a>
+
+	<!-- Sidebar -->
+	<div class="sidebar">
+		<!-- Sidebar user (optional) -->
+		<!--  <div class="user-panel mt-3 pb-3 mb-3 d-flex" style="display:none">
         <div class="image">
           <img src="/resources/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
@@ -59,135 +55,163 @@
         </div>
       </div> -->
 
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-         
-          <li class="nav-header"></li>
-         
-          <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-circle"></i>
-              <p class="sTitle">
-                회원
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-            
-              <li class="nav-item">
-                <a href="/admin/member/memberList" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">전체</p>
-                </a>
-              </li>
-            
-              <li class="nav-item">
-                <a href="/admin/member/artistProList" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">작가신청</p>
-                </a>
-              </li>
-              
-              <li class="nav-item">
-                <a href="/admin/member/outMemberList" class="nav-link">
-                  <i class="far fa-circle nav-icon sTitle"></i>
-                  <p class="sTitle">탈퇴관리</p>
-                </a>
-              </li>
-            </ul>
-           </li>
-                    	
-          <li class="nav-item has-treeview menu-open">
-	            <a href="#" class="nav-link">
-	              <i class="nav-icon fas fa-circle"></i>
-	              <p class="sTitle">
-	                결제
-	                <i class="right fas fa-angle-left"></i>
-	              </p>
-	            </a>
-		         <ul class="nav nav-treeview">
-		            <li class="nav-item">
-		              <a href="/admin/payment/paymentListPage" class="nav-link">
-		                <i class="far fa-circle nav-icon sTitle"></i>
-		                <p class="sTitle">주문</p>
-		              </a>
-		            </li>
-<!-- 		            <li class="nav-item"> -->
-<!-- 		              <a href="/admin/payment/transit" class="nav-link"> -->
-<!-- 		                <i class="far fa-circle nav-icon sTitle"></i> -->
-<!-- 		                <p class="sTitle">배송</p> -->
-<!-- 		              </a> -->
-<!-- 		            </li> -->
-		         </ul>
-          	</li>
-          	
-          	<li class="nav-item has-treeview menu-open">
-	            <a href="#" class="nav-link">
-	              <i class="nav-icon fas fa-circle"></i>
-	              <p class="sTitle">
-	                게시판
-	                <i class="right fas fa-angle-left"></i>
-	              </p>
-	            </a>
-		            <ul class="nav nav-treeview">
-		              <li class="nav-item">
-		                <a href="/admin/board/boardList?brdTypCd=NT" class="nav-link">
-		                  <i class="far fa-circle nav-icon sTitle"></i>
-		                  <p class="sTitle">공지사항</p>
-		                </a>
-		              </li>
-		              <li class="nav-item">
-		                <a href="/admin/board/boardList?brdTypCd=FA" class="nav-link">
-		                  <i class="far fa-circle nav-icon sTitle"></i>
-		                  <p class="sTitle">자주하는질문</p>
-		                </a>
-		              </li>
-		           </ul>
-          	</li>
-          	
-          	<li class="nav-item has-treeview menu-open">
-	            <a href="#" class="nav-link">
-	              <i class="nav-icon fas fa-circle"></i>
-	              <p class="sTitle">
-	                메거진
-	                <i class="right fas fa-angle-left"></i>
-	              </p>
-	            </a>
-		            <ul class="nav nav-treeview">
-		              <li class="nav-item">
-		                <a href="/admin/magazine/magazineList?mgzTypCd=IST" class="nav-link">
-		                  <i class="far fa-circle nav-icon sTitle"></i>
-		                  <p class="sTitle">인사이트</p>
-		                </a>
-		              </li>
-		              <li class="nav-item">
-		                <a href="/admin/magazine/magazineList?mgzTypCd=MDA" class="nav-link">
-		                  <i class="far fa-circle nav-icon sTitle"></i>
-		                  <p class="sTitle">미디어</p>
-		                </a>
-		              </li>
-		              <li class="nav-item">
-		                <a href="/admin/magazine/magazineList?mgzTypCd=EBI" class="nav-link">
-		                  <i class="far fa-circle nav-icon sTitle"></i>
-		                  <p class="sTitle">전시회</p>
-		                </a>
-		              </li>
-		           </ul>
-          	</li>
-          	<li class="nav-item has-treeview menu-open">
-          	 	<li class="nav-header">신고하기</li>
-          	 		<li class="nav-item has-treeview">
-          	 			<a href="/admin/report/reportList" class="nav-link">
-			              <i class="nav-icon fas fa-circle"></i>
-			              <p class="sTitle">
-			                신고하기
-			                <i class="right fas fa-angle-left"></i>
-			              </p>
-			            </a>
-          	 		</li>
-          	 </li>
-          	<!--
+		<!-- Sidebar Menu -->
+		<nav class="mt-2">
+			<ul class="nav nav-pills nav-sidebar flex-column"
+				data-widget="treeview" role="menu" data-accordion="false">
+
+				<li class="nav-header"></li>
+
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							회원 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+
+						<li class="nav-item"><a href="/admin/member/memberList"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">전체</p>
+						</a></li>
+
+						<li class="nav-item"><a href="/admin/member/artistProList"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">작가신청</p>
+						</a></li>
+
+						<li class="nav-item"><a href="/admin/member/outMemberList"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">탈퇴관리</p>
+						</a></li>
+					</ul></li>
+
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							결제 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item"><a href="/admin/payment/paymentListPage"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">주문</p>
+						</a></li>
+						<!-- 		            <li class="nav-item"> -->
+						<!-- 		              <a href="/admin/payment/transit" class="nav-link"> -->
+						<!-- 		                <i class="far fa-circle nav-icon sTitle"></i> -->
+						<!-- 		                <p class="sTitle">배송</p> -->
+						<!-- 		              </a> -->
+						<!-- 		            </li> -->
+					</ul></li>
+
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							게시판 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item"><a
+							href="/admin/board/boardList?brdTypCd=NT" class="nav-link"> <i
+								class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">공지사항</p>
+						</a></li>
+						<li class="nav-item"><a
+							href="/admin/board/boardList?brdTypCd=FA" class="nav-link"> <i
+								class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">자주하는질문</p>
+						</a></li>
+					</ul></li>
+
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							메거진 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item"><a
+							href="/admin/magazine/magazineList?mgzTypCd=IST" class="nav-link">
+								<i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">인사이트</p>
+						</a></li>
+						<li class="nav-item"><a
+							href="/admin/magazine/magazineList?mgzTypCd=MDA" class="nav-link">
+								<i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">미디어</p>
+						</a></li>
+						<li class="nav-item"><a
+							href="/admin/magazine/magazineList?mgzTypCd=EBI" class="nav-link">
+								<i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">전시회</p>
+						</a></li>
+					</ul></li>
+				<!-- 커뮤니티  -->
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							커뮤니티 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item"><a
+							href="/admin/community/communityManagement" class="nav-link">
+								<i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">게시판 관리</p>
+						</a></li>
+						<li class="nav-item"><a
+							href="/admin/community/communityBoardList?commuBorTypCd=ABL"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">게시물 관리</p>
+						</a></li>
+					</ul></li>
+				<!-- 배너 -->
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							배너 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item"><a href="/admin/banner/bannerList"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">배너관리</p>
+						</a></li>
+						<li class="nav-item"><a href="/admin/banner/bannerWrite"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">배너등록</p>
+						</a></li>
+
+
+					</ul></li>
+					
+					<!-- 이벤트관리  -->
+				<li class="nav-item has-treeview menu-open"><a href="#"
+					class="nav-link"> <i class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							이벤트관리 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a>
+					<ul class="nav nav-treeview">
+						<li class="nav-item"><a href="/admin/event/eventList"
+							class="nav-link"> <i class="far fa-circle nav-icon sTitle"></i>
+								<p class="sTitle">쿠폰관리</p>
+						</a></li>
+					</ul></li>
+
+
+				<li class="nav-item has-treeview menu-open">
+				<li class="nav-header">신고하기</li>
+				<li class="nav-item has-treeview"><a
+					href="/admin/report/reportList" class="nav-link"> <i
+						class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							신고하기 <i class="right fas fa-angle-left"></i>
+						</p>
+				</a></li>
+				</li>
+				<!--
           	<li class="nav-item has-treeview menu-open">
 	            <a href="#" class="nav-link">
 	              <i class="nav-icon fas fa-circle"></i>
@@ -207,22 +231,24 @@
           	</li>
           	-->
 				<li class="nav-item has-treeview menu-open">
-					<li class="nav-header">공통관리</li>
-					<li class="nav-item has-treeview">
-						<a href="/admin/comCode" class="nav-link" target="_blank">
-							<i class="nav-icon fas fa-circle"></i>
-							<p class="sTitle">공통코드<i class="right fas fa-angle-left"></i></p>
-						</a>
-					</li>
+				<li class="nav-header">공통관리</li>
+				<li class="nav-item has-treeview"><a href="/admin/comCode"
+					class="nav-link" target="_blank"> <i
+						class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							공통코드<i class="right fas fa-angle-left"></i>
+						</p>
+				</a></li>
 				</li>
 				<li class="nav-item has-treeview menu-open">
-					<li class="nav-header">로그아웃</li>
-					<li class="nav-item has-treeview">
-						<a href="/admin/logout" onclick="return confirm('로그아웃 하시겠습니까?');"class="nav-link">
-							<i class="nav-icon fas fa-circle"></i>
-							<p class="sTitle">로그아웃<i class="right fas fa-angle-left"></i></p>
-						</a>
-					</li>
+				<li class="nav-header">로그아웃</li>
+				<li class="nav-item has-treeview"><a href="/admin/logout"
+					onclick="return confirm('로그아웃 하시겠습니까?');" class="nav-link"> <i
+						class="nav-icon fas fa-circle"></i>
+						<p class="sTitle">
+							로그아웃<i class="right fas fa-angle-left"></i>
+						</p>
+				</a></li>
 				</li>
 
 			</ul>
