본인인증 모듈 변경 / 회원가입 url 변경

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -364,7 +364,7 @@
 				</div>
 			</div>
 			<div class="modal-body login-body">
-				<img src="/resources/img/icon/login-logo.png"  class="login-logo"/>
+				<img src="/resources/img/logo_new.png"  class="login-logo"/>
 				<div class="login-box">
 					<p class="lb-p1" id="emBoardTitle"></p>
 					<div class="text-box1" id="emBoardContent">
