--- a/src/main/resources/templates/thymeleaf/fo/member/join_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_2.html
@@ -586,11 +586,10 @@
   		
       } else {
           // 확인(예) 버튼 클릭 시 이벤트
-        
           
           $.ajax({
   		     type: "post",
-  		     url: "main/memberInsertData",
+  		     url: "/main/memberInsertData",
   		     data: memParams,
   		     success: function(data) {
   		    	 
