--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -656,7 +656,7 @@
       function searchMainData(page) {
 		$.ajax({
 	           type: "post",
-	           url: "main/mainData",
+	           url: "/main/mainData",
 	           data: {
 	        	   page : page,
 	        	   pageSize : 4
